Update the header and bottom of contacts.html, index.html, and resume.html.

--- a/contacts.html
+++ b/contacts.html
@@ -25,6 +25,7 @@
    <link href="assets/vendor/hover/css/hover-min.css?v=2.0.2" property='stylesheet' rel="stylesheet" type="text/css" media="screen"/>
    <link href="assets/vendor/mfp/css/magnific-popup.min.css?v=1.1.0" property='stylesheet' rel="stylesheet" type="text/css" media="screen"/>
    <link href="assets/vendor/owl-carousel/assets/owl.carousel.min.css?v=2.1.0" property='stylesheet' rel="stylesheet" type="text/css" media="screen"/>
+   <link href="mike.css" property='stylesheet' rel="stylesheet" type="text/css"/>
 
    <!-- Custom styles -->
    <link href="assets/custom/2.1.0/css/style.css" property='stylesheet' rel="stylesheet" type="text/css" media="screen"/>
@@ -53,52 +54,23 @@
                      <div class="feat-wrapper">
                         <div class="feat-metas">
                            <p class="color10">Welcome to the</p>
-                           <h3 class="font-accident-one-normal text-nowrap color01">Gridus HTML Template</h3>
+                           <h3 class="font-accident-one-normal text-nowrap color01">Chang-Yi (Mike) Chen</h3>
                            <hr>
-                           <p class="color10">Resume & Portfolio</p>
-                           <div class="morelink"><a href="#!" class="red">read more</a></div>
+                           <p class="color10">Resume</p>
+                           <div class="morelink"><a href="#more" class="red">read more</a></div>
                         </div>
                      </div>
                   </div>
-                  <img src="assets/custom/2.1.0/images/layouts/michael/carousel/01.jpg" class="img-responsive" alt="01">
+                  <img src="image/01.jpg" class="img-responsive" alt="01">
                </div>
 
-               <div class="item">
-                  <div class="feat-post right">
-                     <div class="feat-wrapper">
-                        <div class="feat-metas">
-                           <p class="color10">Welcome to the</p>
-                           <h3 class="font-accident-one-normal text-nowrap color01">Gridus HTML Template</h3>
-                           <hr>
-                           <p class="color10">Resume & Portfolio</p>
-                           <div class="morelink"><a href="#!" class="cyan">read more</a></div>
-                        </div>
-                     </div>
-                  </div>
-                  <img src="assets/custom/2.1.0/images/layouts/michael/carousel/02.jpg" class="img-responsive" alt="01">
-               </div>
-
-               <div class="item">
-                  <div class="feat-post right">
-                     <div class="feat-wrapper">
-                        <div class="feat-metas">
-                           <p class="color10">Welcome to the</p>
-                           <h3 class="font-accident-one-normal text-nowrap color01">Gridus HTML Template</h3>
-                           <hr>
-                           <p class="color10">Resume & Portfolio</p>
-                           <div class="morelink"><a href="#!" class="blue">read more</a></div>
-                        </div>
-                     </div>
-                  </div>
-                  <img src="assets/custom/2.1.0/images/layouts/michael/carousel/03.jpg" class="img-responsive" alt="01">
-               </div>
 
 
             </div>
-            <div class="e-divider-6"></div>
+            <div class="e-divider-4"></div>
          </section>
          <!-- /Carousel -->
-         <div class="col-md-12 vc-name nopadding">
+         <div class="col-md-12 vc-name nopadding" id="more">
 
             <ul id="nav" class="row nopadding cd-side-navigation">
                <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
@@ -225,40 +197,30 @@
         data-animation-distance="50px">
    <div class="container-fluid nopadding">
       <div class="row">
-         <div class="col-sm-3">
-            <h5 class="font-accident-two-normal uppercase">Gridus HTML Template</h5>
+         <div class="col-sm-4">
+            <h5 class="font-accident-two-normal uppercase">Chang-Yi (Mike) Chen Resume</h5>
             <p class="inline-block">
-               The Gridus Resume Template has an unique modern flat intuitive design. You can choose one of 8 pre-defined Color schemes.
+               The resume was made with <a href="https://wrapbootstrap.com/theme/gridus-vcard-cv-resume-portfolio-WB0RK211T" style="color: gray;">Gridushas</a>, a bootstrap template suitable for creating CV/Resume/vCard.
             </p>
             <div class="divider-dynamic"></div>
          </div>
-         <div class="col-sm-3 cv-link">
+         <div class="col-sm-4 cv-link">
             <h5 class="font-accident-two-normal uppercase">Download cv</h5>
             <div class="dividewhite1"></div>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>German</a>
-            <a href="#!"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>Spanish</a>
+            <a href="Chang_Yi_CV.pdf"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
+            <a href="Chang_Yi_Resume_Chinese.pdf"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>Chinese</a>
             <p class="inline-block">
                The CV is in .pdf format. Use the Adobe Reader to open it.
             </p>
             <div class="divider-dynamic"></div>
          </div>
-         <div class="col-sm-3">
-            <h5 class="font-accident-two-normal uppercase">Newsletter</h5>
-            <div class="dividewhite1"></div>
-            <input class="newsletter-email" type="email" required="" name="ne" placeholder="Your Email">
-            <a href="#!" class="btn btn-wh-trans btn-xs">OK</a>
-            <div class="divider-dynamic"></div>
-         </div>
-         <div class="col-sm-3">
+         <div class="col-sm-4">
             <h5 class="font-accident-two-normal uppercase">Follow me</h5>
             <div class="follow">
                <ul class="list-inline social">
-                  <li><a target="_blank" href="#" class="rst-icon-facebook"><i class="fa fa-facebook"></i></a></li>
-                  <li><a target="_blank" href="#" class="rst-icon-twitter"><i class="fa fa-twitter"></i></a></li>
-                  <li><a target="_blank" href="#" class="rst-icon-pinterest"><i class="fa fa-pinterest"></i></a></li>
-                  <li><a target="_blank" href="#" class="rst-icon-instagram"><i class="fa fa-instagram"></i></a></li>
-                  <li><a target="_blank" href="#" class="rst-icon-youtube"><i class="fa fa-youtube"></i></a></li>
+                  <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100001333325749" class="rst-icon-facebook"><i class="fa fa-facebook"></i></a></li>
+                  <li><a target="_blank" href="https://twitter.com/b99901026" class="rst-icon-twitter"><i class="fa fa-twitter"></i></a></li>
+                  <li><a target="_blank" href="https://www.flickr.com/photos/151140435@N04/" class="rst-icon-flickr"><i class="fa fa-flickr"></i></a></li>
                </ul>
             </div>
             <div class="divider-dynamic"></div>
