--- a/index.html
+++ b/index.html
@@ -309,14 +309,14 @@
         data-animation-distance="50px">
    <div class="container-fluid nopadding">
       <div class="row">
-         <div class="col-sm-3">
-            <h5 class="font-accident-two-normal uppercase">Gridus HTML Template</h5>
+         <div class="col-sm-4">
+            <h5 class="font-accident-two-normal uppercase">Chang-Yi (Mike) Chen Resume</h5>
             <p class="inline-block">
                The resume was made with <a href="https://wrapbootstrap.com/theme/gridus-vcard-cv-resume-portfolio-WB0RK211T" style="color: gray;">Gridushas</a>, a bootstrap template suitable for creating CV/Resume/vCard.
             </p>
             <div class="divider-dynamic"></div>
          </div>
-         <div class="col-sm-3 cv-link">
+         <div class="col-sm-4 cv-link">
             <h5 class="font-accident-two-normal uppercase">Download cv</h5>
             <div class="dividewhite1"></div>
             <a href="Chang_Yi_CV.pdf"><i class="fa fa-long-arrow-down" aria-hidden="true"></i>English</a>
@@ -326,22 +326,13 @@
             </p>
             <div class="divider-dynamic"></div>
          </div>
-         <div class="col-sm-3">
-            <h5 class="font-accident-two-normal uppercase">Newsletter</h5>
-            <div class="dividewhite1"></div>
-            <input class="newsletter-email" type="email" required="" name="ne" placeholder="Your Email">
-            <a href="#!" class="btn btn-wh-trans btn-xs">OK</a>
-            <div class="divider-dynamic"></div>
-         </div>
-         <div class="col-sm-3">
+         <div class="col-sm-4">
             <h5 class="font-accident-two-normal uppercase">Follow me</h5>
             <div class="follow">
                <ul class="list-inline social">
-                  <li><a target="_blank" href="#" class="rst-icon-facebook"><i class="fa fa-facebook"></i></a></li>
-                  <li><a target="_blank" href="#" class="rst-icon-twitter"><i class="fa fa-twitter"></i></a></li>
-                  <li><a target="_blank" href="#" class="rst-icon-pinterest"><i class="fa fa-pinterest"></i></a></li>
-                  <li><a target="_blank" href="#" class="rst-icon-instagram"><i class="fa fa-instagram"></i></a></li>
-                  <li><a target="_blank" href="#" class="rst-icon-youtube"><i class="fa fa-youtube"></i></a></li>
+                  <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100001333325749" class="rst-icon-facebook"><i class="fa fa-facebook"></i></a></li>
+                  <li><a target="_blank" href="https://twitter.com/b99901026" class="rst-icon-twitter"><i class="fa fa-twitter"></i></a></li>
+                  <li><a target="_blank" href="https://www.flickr.com/photos/151140435@N04/" class="rst-icon-flickr"><i class="fa fa-flickr"></i></a></li>
                </ul>
             </div>
             <div class="divider-dynamic"></div>
