--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name=viewport content="width=device-width, initial-scale=1">
 
-   <title>Gridus vCard | Contacts</title>
+   <title>Chang-Yi (Mike) Chen | Contacts</title>
 
    <meta name="description" content="Gridus vCard HTML Template is the professional responsive personal website template, based on the latest Bootstrap 3">
    <meta name="keywords" content="html5, template, website, responsive, bootstrap">
@@ -73,16 +73,18 @@
          <div class="col-md-12 vc-name nopadding" id="more">
 
             <ul id="nav" class="row nopadding cd-side-navigation">
-               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
+               <li class="col-xs-4 col-sm-4 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
                   <a href="index.html" class="hvr-sweep-to-bottom"><i class="flaticon-insignia"></i><span>home</span></a>
                </li>
-               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color02" data-animation-duration="1000" data-animation-delay="300">
+               <li class="col-xs-4 col-sm-4 nopadding menuitem ui-menu-color02" data-animation-duration="1000" data-animation-delay="300">
                   <a href="resume.html" class="hvr-sweep-to-bottom"><i class="flaticon-graduation61"></i><span>resume</span></a>
                </li>
+               <!--
                <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color03" data-animation-duration="1000" data-animation-delay="500">
-                  <a href="portfolio-4-col.html" class="hvr-sweep-to-bottom"><i class="flaticon-book-bag2"></i><span>project</span></a>
+                  <a href="project.html" class="hvr-sweep-to-bottom"><i class="flaticon-book-bag2"></i><span>project</span></a>
                </li>
-               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color04" data-animation-duration="1000" data-animation-delay="700">
+               -->
+               <li class="col-xs-4 col-sm-4 nopadding menuitem ui-menu-color04" data-animation-duration="1000" data-animation-delay="700">
                   <a href="contacts.html" class="hvr-sweep-to-bottom"><i class="flaticon-placeholders4"></i><span>contacts</span></a>
                </li>
             </ul>
@@ -132,7 +134,7 @@
                     data-animation-distance="25px">
                   <div class="row">
                      <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Address:</span></div>
-                     <div class="col-sm-10"><p class="small">12234 Direct Drive, Daytona Beach, Fl USA</p></div>
+                     <div class="col-sm-10"><p class="small">3F., No. 5, Aly. 2, Ln. 253, Neihu Rd., Taipei City 114, Taiwan</p></div>
                   </div>
                   <div class="row">
                      <div class="col-sm-2"><span class="font-accident-two-bold uppercase">Phone:</span></div>
@@ -229,7 +231,7 @@
       <div class="dividewhite1"></div>
       <div class="row">
          <div class="col-md-12 copyrights">
-            <p>© 2016 Samuel Anderson.</p>
+            <p>© 2017 Chang-Yi (Mike) Chen.</p>
          </div>
       </div>
    </div>
