--- a/index.html
+++ b/index.html
@@ -73,16 +73,18 @@
          <div class="col-md-12 vc-name nopadding" id="more">
 
             <ul id="nav" class="row nopadding cd-side-navigation">
-               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
+               <li class="col-xs-4 col-sm-4 nopadding menuitem ui-menu-color01" data-animation-duration="1000" data-animation-delay="100">
                   <a href="index.html" class="hvr-sweep-to-bottom"><i class="flaticon-insignia"></i><span>home</span></a>
                </li>
-               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color02" data-animation-duration="1000" data-animation-delay="300">
+               <li class="col-xs-4 col-sm-4 nopadding menuitem ui-menu-color02" data-animation-duration="1000" data-animation-delay="300">
                   <a href="resume.html" class="hvr-sweep-to-bottom"><i class="flaticon-graduation61"></i><span>resume</span></a>
                </li>
+               <!--
                <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color03" data-animation-duration="1000" data-animation-delay="500">
-                  <a href="portfolio-4-col.html" class="hvr-sweep-to-bottom"><i class="flaticon-book-bag2"></i><span>project</span></a>
+                  <a href="project.html" class="hvr-sweep-to-bottom"><i class="flaticon-book-bag2"></i><span>project</span></a>
                </li>
-               <li class="col-xs-3 col-sm-3 nopadding menuitem ui-menu-color04" data-animation-duration="1000" data-animation-delay="700">
+               -->
+               <li class="col-xs-4 col-sm-4 nopadding menuitem ui-menu-color04" data-animation-duration="1000" data-animation-delay="700">
                   <a href="contacts.html" class="hvr-sweep-to-bottom"><i class="flaticon-placeholders4"></i><span>contacts</span></a>
                </li>
             </ul>
@@ -287,7 +289,7 @@
               data-animation-distance="200px">
 
             <div class="flex-panel">
-               <img src="assets/custom/2.1.0/images/layouts/michael/photos/02.jpg" class="img-responsive">
+               <img src="image/03.jpg" class="img-responsive">
             </div>
 
          </div>
